--- a/Wpf/App.xaml
+++ b/Wpf/App.xaml
@@ -4,7 +4,7 @@
              xmlns:local="clr-namespace:Wpf"
              xmlns:viewModel="clr-namespace:Wpf.MVVM.ViewModel"
              xmlns:view="clr-namespace:Wpf.MVVM.View"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Admin.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -12,18 +12,25 @@
                 <ResourceDictionary Source="/Theme/ModernBorder.xaml"/>
                 <ResourceDictionary Source="/Theme/MenuButtonTheme.xaml"/>
                 <ResourceDictionary Source="/Theme/TextBoxTheme.xaml"/>
+                <ResourceDictionary Source="/Theme/ModernCombobox.xaml"/>
+                <ResourceDictionary Source="/Theme/ModernDataGrid.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign2.Defaults.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Secondary/MaterialDesignColor.Blue.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
-                <view:HomeView/>
+            <DataTemplate DataType="{x:Type viewModel:A_UsersViewModel}">
+                <view:A_UsersView/>
             </DataTemplate>
 
-            <DataTemplate DataType="{x:Type viewModel:DiscoveryViewModel}">
-                <view:DiscoveryView/>
+            <DataTemplate DataType="{x:Type viewModel:A_ComputersViewModel}">
+                <view:A_ComputersView/>
             </DataTemplate>
 
-            <DataTemplate DataType="{x:Type viewModel:FeatureViewModel}">
-                <view:FeatureView/>
+            <DataTemplate DataType="{x:Type viewModel:A_ProductsViewModel}">
+                <view:A_ProductsView/>
             </DataTemplate>
 
         </ResourceDictionary>
