--- a/Wpf/Login.xaml
+++ b/Wpf/Login.xaml
@@ -92,8 +92,8 @@
                     Opacity="0.5"/>
 
             <StackPanel Orientation="Horizontal" Margin="0,50,0,0">
-                <Button x:Name="btnLogin" Click="btnLogin_Click" Width="100" Height="40" Content="LOGIN" Margin="60,0,60,0"/>
-                <Button x:Name="btnRegister" Click="btnRegister_Click" Width="100" Height="40" Content="REGISTER"/>
+                <Button x:Name="btnLogin" Click="btnLogin_Click" Width="100" Height="40" Content="LOGIN" Margin="60,0,60,0" Style="{StaticResource ModernButtonStyle}"/>
+                <Button x:Name="btnRegister" Click="btnRegister_Click" Width="100" Height="40" Content="REGISTER" Style="{StaticResource ModernButtonStyle}"/>
             </StackPanel>
 
         </StackPanel>
