--- a/Wpf/Register.xaml
+++ b/Wpf/Register.xaml
@@ -128,8 +128,8 @@
                     Opacity="0.8"/> 
 
             <StackPanel Orientation="Horizontal" Margin="0,50,0,0">
-                <Button x:Name="btnRegister" Click="btnRegister_Click" Width="100" Height="40" Content="REGISTER" Margin="60,0,60,0"/>
-                <Button x:Name="btnCancel" Click="btnCancel_Click" Width="100" Height="40" Content="CANCEL"/>
+                <Button x:Name="btnRegister" Click="btnRegister_Click" Width="100" Height="40" Content="REGISTER" Margin="60,0,60,0" Style="{StaticResource ModernButtonStyle}"/>
+                <Button x:Name="btnCancel" Click="btnCancel_Click" Width="100" Height="40" Content="CANCEL" Style="{StaticResource ModernButtonStyle}"/>
             </StackPanel>
 
         </StackPanel>
