--- a/Wpf/Theme/ModernButton.xaml
+++ b/Wpf/Theme/ModernButton.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="{x:Type Button}">
+    <Style x:Key="ModernButtonStyle" TargetType="{x:Type Button}">
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="FontFamily" Value="Helvetica"/>
         <Setter Property="FontWeight" Value="Light"/>
