--- a/Wpf/MVVM/View/A_ComputersView.xaml
+++ b/Wpf/MVVM/View/A_ComputersView.xaml
@@ -3,10 +3,86 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:Wpf.MVVM.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="700" d:DesignWidth="800">
     <Grid>
-        <Label Content="Computer" FontSize="50" Foreground="White"/>
+        <StackPanel Margin="30 12 0 0">
+            <DockPanel Margin="0 12 5 0">
+                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"
+               FontSize="15" FontWeight="Bold" Foreground="White" Text="All Computers"/>
+                <TextBlock Text="{Binding Source={x:Static sys:DateTime.Today},   
+                           StringFormat='{}{0:dddd, MMMM dd, yyyy}'}" Foreground="LightGray" FontSize="12"
+                           FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Right"
+                           DockPanel.Dock="Right" Margin="0 0 20 0"/>
+            </DockPanel>
+
+            <DockPanel Margin="0 20 30 0">
+                <TextBlock Text="Filter by" FontSize="13" FontWeight="SemiBold" 
+               Foreground="White" HorizontalAlignment="Left" 
+               VerticalAlignment="Center" Margin="0 0 10 0"/>
+                <ComboBox Padding="10 0 0 0" Background="LightGray" Width="120" HorizontalAlignment="Left" 
+              Style="{DynamicResource theComboBox}"
+              ItemContainerStyle="{DynamicResource theComboBoxItem}"
+              Height="30">
+                    <ComboBoxItem IsSelected="True">All Computers</ComboBoxItem>
+                    <ComboBoxItem>In Use</ComboBoxItem>
+                    <ComboBoxItem>Not in use</ComboBoxItem>
+                </ComboBox>
+                <Button Style="{StaticResource MaterialDesignFlatButton}"
+                        materialDesign:RippleAssist.Feedback="White" Background="#FF4E4C4C"
+                        Foreground="LightGray" materialDesign:ButtonAssist.CornerRadius="6"
+                        Width="auto" Height="35" HorizontalAlignment="Right">   
+                    <WrapPanel>
+                        <materialDesign:PackIcon Kind="PlusThick" VerticalAlignment="Center" Margin="0 0 10 0"/>
+                        <TextBlock Text="Add new computer"/>
+                    </WrapPanel>
+                </Button>
+            </DockPanel>
+
+            <Separator Height="1" Background="LightGray" Margin="0 10 30 10"/>
+            <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" 
+          ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
+          RowStyle="{DynamicResource DataGridRowStyle1}" Margin="0 20 30 0" x:Name="userDataGrid">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="#" IsReadOnly="True" Width="auto" Binding="{Binding Number}"/>
+
+                    <DataGridTemplateColumn Header="Member" IsReadOnly="True" Width="*">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+
+                                    <TextBlock Text="{Binding Name}" VerticalAlignment="Center"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+
+
+                    <DataGridTextColumn Header="Position" IsReadOnly="True" Width="*" Binding="{Binding Position}"/>
+                    <DataGridTextColumn Header="Email" IsReadOnly="True" Width="*" Binding="{Binding Email}"/>
+                    <DataGridTextColumn Header="Phone" IsReadOnly="True" Width="*" Binding="{Binding Phone}"/>
+
+                    <DataGridTemplateColumn Header="Operations"  IsReadOnly="True" Width="auto">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <Button Style="{StaticResource gridEditButton}">
+                                        <materialDesign:PackIcon Kind="PencilOutline" Style="{StaticResource gridButtonIcon}"/>
+                                    </Button>
+                                    <Button Style="{StaticResource gridRemoveButton}" Margin="5 0 0 0">
+                                        <materialDesign:PackIcon Kind="DeleteOutline" Style="{StaticResource gridButtonIcon}"/>
+                                    </Button>
+                                </StackPanel>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+
+
+                </DataGrid.Columns>
+            </DataGrid>
+        </StackPanel>
     </Grid>
 </UserControl>
