--- a/Wpf/MVVM/View/A_ComputersView.xaml
+++ b/Wpf/MVVM/View/A_ComputersView.xaml
@@ -47,22 +47,10 @@
           ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
           RowStyle="{DynamicResource DataGridRowStyle1}" Margin="0 20 30 0" x:Name="userDataGrid">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="#" IsReadOnly="True" Width="auto" Binding="{Binding Number}"/>
+                    <DataGridTextColumn Header="ID" IsReadOnly="True" Width="auto" Binding="{Binding Number}"/>
 
-                    <DataGridTemplateColumn Header="Member" IsReadOnly="True" Width="*">
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <StackPanel Orientation="Horizontal">
-
-                                    <TextBlock Text="{Binding Name}" VerticalAlignment="Center"/>
-                                </StackPanel>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
-
-
-                    <DataGridTextColumn Header="Position" IsReadOnly="True" Width="*" Binding="{Binding Position}"/>
-                    <DataGridTextColumn Header="Email" IsReadOnly="True" Width="*" Binding="{Binding Email}"/>
+                    <DataGridTextColumn Header="Computer Name" IsReadOnly="True" Width="*" Binding="{Binding Position}"/>
+                    <DataGridTextColumn Header="Status" IsReadOnly="True" Width="*" Binding="{Binding Email}"/>
                     <DataGridTextColumn Header="Phone" IsReadOnly="True" Width="*" Binding="{Binding Phone}"/>
 
                     <DataGridTemplateColumn Header="Operations"  IsReadOnly="True" Width="auto">
