--- a/Wpf/Admin.xaml
+++ b/Wpf/Admin.xaml
@@ -14,8 +14,8 @@
         WindowStartupLocation="CenterScreen">
 
    <Window.DataContext>
-     <viewModel:MainViewModel/>
-   </Window.DataContext>
+        <viewModel:MainViewModel/>
+    </Window.DataContext>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -53,7 +53,7 @@
                     </Ellipse.Fill>
                 </Ellipse>
                 <TextBlock FontSize="18" FontWeight="Bold" TextAlignment="Center"
-                           Foreground="White" Text="Anh Minh Hoang"
+                           Foreground="White" Text="A D. Min"
                            HorizontalAlignment="Center" Margin="0 10 0 0"/>
                 <TextBlock FontFamily="Helvetica" FontSize="16" Text="Admin" FontWeight="SemiBold"
                            TextAlignment="Center" HorizontalAlignment="Center" Foreground="LightGray"
