--- a/Wpf/App.xaml
+++ b/Wpf/App.xaml
@@ -4,7 +4,7 @@
              xmlns:local="clr-namespace:Wpf"
              xmlns:viewModel="clr-namespace:Wpf.MVVM.ViewModel"
              xmlns:view="clr-namespace:Wpf.MVVM.View"
-             StartupUri="Admin.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
