--- a/Wpf/MVVM/View/M_OrdersView.xaml
+++ b/Wpf/MVVM/View/M_OrdersView.xaml
@@ -1,13 +1,12 @@
-﻿<UserControl x:Class="Wpf.MVVM.View.FeatureView"
+﻿<UserControl x:Class="Wpf.MVVM.View.M_OrdersView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Wpf.MVVM.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="AntiqueWhite">
-
-        <TextBlock Text="PANEL 3" Foreground="Black" FontSize="50"/>
+             d:DesignHeight="450" d:DesignWidth="800" Background="Red">
+    <Grid>
+            
     </Grid>
 </UserControl>
