--- a/Wpf/MVVM/View/A_UsersView.xaml
+++ b/Wpf/MVVM/View/A_UsersView.xaml
@@ -9,8 +9,14 @@
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="800">
     <Grid>
+
         <StackPanel Margin="30 12 0 0">
-            <DockPanel Margin="0 12 5 0">
+            <StackPanel.Resources>
+                <local:RoleConverter x:Key="roleConverter"/>
+                <local:ComputerConverter x:Key="computerConverter"/>
+            </StackPanel.Resources>
+
+                <DockPanel Margin="0 12 5 0">
                 <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"
                            FontSize="15" FontWeight="Bold" Foreground="White" Text="All Users"/>
                 <TextBlock Text="{Binding Source={x:Static sys:DateTime.Today},   
@@ -91,6 +97,8 @@
                 <Button Style="{StaticResource MaterialDesignFlatButton}"
                         materialDesign:RippleAssist.Feedback="White" Background="#FF4E4C4C"
                         Foreground="LightGray" materialDesign:ButtonAssist.CornerRadius="6"
+                        x:Name="btnCreate"
+                        Click="btnCreate_Click"
                         Width="auto" Height="35" HorizontalAlignment="Right">   
                     <WrapPanel>
                         <materialDesign:PackIcon Kind="PlusThick" VerticalAlignment="Center" Margin="0 0 10 0"/>
@@ -102,24 +110,40 @@
             <Separator Height="1" Background="LightGray" Margin="0 10 30 10"/>
             <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" 
                       ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
+                      ItemsSource="{Binding Users}" 
                       RowStyle="{DynamicResource DataGridRowStyle1}" Margin="0 20 30 0" x:Name="userDataGrid">
+
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="#" IsReadOnly="True" Width="auto" Binding="{Binding Number}"/>
+                    <DataGridTextColumn Header="ID" IsReadOnly="True" Width="auto" Binding="{Binding UserId}"/>
 
-                    <DataGridTextColumn Header="Username" IsReadOnly="True" Width="*"/>
+                    <DataGridTextColumn Header="Username" IsReadOnly="True" Width="auto" Binding="{Binding UserName}"/>
 
-                    <DataGridTextColumn Header="Email" IsReadOnly="True" Width="*" Binding="{Binding Email}"/>
-                    <DataGridTextColumn Header="Computer" IsReadOnly="True" Width="*" Binding="{Binding Phone}"/>
-                    <DataGridTextColumn Header="Time remain" IsReadOnly="True" Width="*"/>
+                    <DataGridTextColumn Header="Email" IsReadOnly="True" Width="auto" Binding="{Binding UserEmail}"/>
 
+                    <DataGridTextColumn Header="Password" IsReadOnly="True" Width="auto" Binding="{Binding UserPassword}" Visibility="Collapsed"/>
+
+
+                    <DataGridTemplateColumn Header="Computer" IsReadOnly="True" Width="auto">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding CurrentComputers, Converter={StaticResource computerConverter}}"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+
+                    <DataGridTextColumn Header="Roles" IsReadOnly="True" Width="*" Binding="{Binding UserRoles, Converter={StaticResource roleConverter}}"/>
                     <DataGridTemplateColumn Header="Operations"  IsReadOnly="True" Width="auto">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
-                                    <Button Style="{StaticResource gridEditButton}">
+                                    <Button Style="{StaticResource gridEditButton}" Margin="8 0 0 0" x:Name="btnEdit" Click="btnEdit_Click"
+                                            Visibility="{Binding UserRoles}">
                                         <materialDesign:PackIcon Kind="PencilOutline" Style="{StaticResource gridButtonIcon}"/>
                                     </Button>
-                                    <Button Style="{StaticResource gridRemoveButton}" Margin="5 0 0 0">
+                                    <Button Style="{StaticResource gridRemoveButton}" Margin="8 0 0 0"
+                                            x:Name="btnDelete"
+                                            Click="btnDelete_Click"
+                                            Visibility="{Binding UserRoles}">
                                         <materialDesign:PackIcon Kind="DeleteOutline" Style="{StaticResource gridButtonIcon}"/>
                                     </Button>
                                 </StackPanel>
